Bug 1674658: part 2) Don't peform the default action for `mousemove` events when it should be prevented. r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D106083